--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGODB_URI=mongodb+srv://raihan:raihan@cluster0.iqrqhxj.mongodb.net/?retryWrites=true&w=majority
-NEXT_PUBLIC_SITE_URL=https://daily-millions.vercel.app 
+MONGODB_URI=
+NEXT_PUBLIC_SITE_URL=
